Fixed random join command not working properly